--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   image_cropper: ^5.0.0
   flutter_image_compress: ^2.0.4
   flutter_phone_direct_caller: ^2.1.1
+  responsive_framework:
 
 dev_dependencies:
   flutter_test:
