--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,18 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  flutter_svg: ^2.0.7
+#  flutter_svg: ^2.0.7
   provider: ^6.0.5
   image_picker: ^1.0.4
   path_provider: ^2.1.1
   shared_preferences: ^2.2.1
   image_cropper: ^5.0.0
   flutter_image_compress: ^2.0.4
-  flutter_phone_direct_caller: ^2.1.1
+#  flutter_phone_direct_caller: ^2.1.1
+  direct_caller_sim_choice: ^1.0.4
+  permission_handler:
+#  sim_data_plus:
+#  url_launcher:
   responsive_framework:
 
 dev_dependencies:
@@ -37,6 +41,7 @@ flutter:
 
   assets:
     - assets/
+    - assets/tutorials/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
